[gd_scene load_steps=4 format=3 uid="uid://cp270tkjlc8pp"]

[ext_resource type="Script" path="res://Scenes/MainScenes/PackScreen.gd" id="1_imxdv"]
[ext_resource type="PackedScene" uid="uid://cao8nognmmp5b" path="res://Scenes/UIScene/info_screen.tscn" id="2_qsavk"]
[ext_resource type="PackedScene" uid="uid://dcgsl03qa1bnd" path="res://Scenes/UIScene/pack_a_punch.tscn" id="3_4wana"]

[node name="PackScreen" type="Control"]
top_level = true
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2
script = ExtResource("1_imxdv")

[node name="InfoScreen" parent="." instance=ExtResource("2_qsavk")]
layout_mode = 1

[node name="PackAPunch2" parent="." instance=ExtResource("3_4wana")]
layout_mode = 1
